--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
       </dependency>
 
       <!-- log end -->
+    <!--<dependency>-->
+      <!--<groupId>org.quartz-scheduler</groupId>-->
+      <!--<artifactId>quartz-jobs</artifactId>-->
+      <!--<version>${quartz.version}</version>-->
+    <!--</dependency>-->
   </dependencies>
 
   <build>
